change forget code style

--- a/css/style.css
+++ b/css/style.css
@@ -1612,4 +1612,4 @@ input[type="file"] {
 .reset-pass--btn {
   font-family: "nazanin";
   font-size: 1.6rem;
-  letter-spacing: .4px; }
+  letter-spacing: 0.4px; }
