--- a/sass/_forgot.scss
+++ b/sass/_forgot.scss
@@ -1,5 +1,5 @@
 .cont-style {
-    direction: rtl;
+  direction: rtl;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -7,30 +7,30 @@
 }
 
 .text-c--style {
-    h2,
-    p {
-        font-family: "nazanin";
-    }
+  h2,
+  p {
+    font-family: "nazanin";
+  }
   h3 {
     i {
       font-size: 5rem !important;
-      color: rgba(0, 0, 0, .7);
+      color: rgba(0, 0, 0, 0.7);
       margin-bottom: 2rem;
     }
   }
 }
 
 .ig-style {
-    direction: ltr;
-    margin-top: 2rem;
+  direction: ltr;
+  margin-top: 2rem;
 
-    input   {
-        text-align: right;
-    }
+  input {
+    text-align: right;
+  }
 }
 
 .reset-pass--btn {
-    font-family: "nazanin";
-    font-size: 1.6rem;
-    letter-spacing: .4px;
+  font-family: "nazanin";
+  font-size: 1.6rem;
+  letter-spacing: 0.4px;
 }
