--- a/sass/_loginregister.scss
+++ b/sass/_loginregister.scss
@@ -6,6 +6,15 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 4rem;
+
+  @include respond(phone) {
+    // fixed container
+    padding: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .form-container {
@@ -14,6 +23,10 @@
   /* align-items: center; */
   font-size: 1rem;
   font-family: "vazir";
+
+  // @include respond(phone) {
+  //   transform: translate(10px, 10px);
+  // }
 }
 
 .form-box {
@@ -24,12 +37,15 @@
   padding: 5rem 4rem;
   border-radius: 0.5rem;
   overflow: hidden;
+
+  @include respond(tablet-1) {
+    margin: 0 5.4rem;
+  }
 }
 
 .form-box h2 {
   font-size: 2.2rem;
   margin-bottom: 1.2rem;
-  /* font-weight: bold; */
 }
 
 .form-box .field {
@@ -152,18 +168,57 @@
   flex-direction: column;
   transform: translateX(17rem);
   line-height: 1.8;
+
+  @include respond(phone) {
+    display: none;
+  }
+
+  @include respond(tablet-2) {
+    width: 100%;
+    text-align: center;
+    transform: translate(75%, -40rem);
+    background-color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 .welcome-text--paragraph {
   font-family: "ordibehesht";
   font-size: 5rem;
   color: #ffffff;
+
+  @include respond(tablet-1) {
+    width: max-content;
+    font-size: 3.5rem;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    filter: blur();
+    position: absolute;
+    top: -45rem;
+    left: 0;
+    transform: translateX(-34%);
+    padding: 1rem 4rem;
+    border-radius: 1rem;
+  }
+
+  @include respond(tablet-2) {
+    width: max-content;
+  }
 }
 
 .welcome-text--small {
   font-family: "ordibehesht";
   font-size: 2.4rem;
   color: #ffffff;
+
+  @include respond(tablet-1) {
+    display: none;
+  }
+
+  @include respond(tablet-2) {
+    display: none;
+  }
 }
 
 .register-error {
