--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import "mixin";
 @import "fonts";
 @import "base";
 
@@ -16,4 +17,3 @@
 @import "search";
 @import "settings";
 @import "forgot";
-@import "reset";
